bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: not found: value &&
  if (aSmile) && (bSmile){
              ^MonkeyTrouble:6: error: not found: value &&
  if (!aSmile) && (!bSmile){
               ^