bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (aSmile) && (bSmile){
    return(true)
  }
  if (!aSmile) && (!bSmile){
    return(true)
  }
  else{
    return(false)
  }
}